...
    }
    func show(quiz result: QuizResultsViewModel) {
        let alert = UIAlertController(
                    title: result.title,
                    message: result.text,
                    preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "Game results"
                let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
                    guard let self = self else { return }
                    self.presenter.restartGame()
                }
                alert.addAction(action)
                self.present(alert, animated: true, completion: nil)
...
